libs/@local/hashql/ast/tests/ui/lower/special-form-expander/type-generic-generic-ident.jsonc
//@ run: fail
//@ description: An identifier with generic arguments should fail
[
  "::kernel::special_form::type",
  "Foo<Bar<Baz>>",
  //~^ ERROR Generic arguments must be simple identifiers
  { "#struct": { "foo": "Bar" } },
  "_"
]
